0.4.2
Inbuilt docviewer can now be showed either in a seperate window or in a tab in the editor, can be set in the prefs ("Show Docviewer In A Window")
Added docviewer to new tab in editor.
Added 'INFO' command to progress bar to set extra info, see testbar example for usage.
Speed tweaks for loading session.
Open recent now works in gtk3 on *buntu ( 'til they break it again ).
Open recent menu now updates properly.
Added manpage for kkeditmsg.
Changed user marks so all can be visible on the same line.
Started docs for kkeditmsg.
Added extra script commands:
Quit GotoLine SearchDef SelectTab SelectTabByPath Bookmark CloseTab SetMark UnsetMark MoveTo SelectBetween Paste Copy Cut InsertText InsertNL InsertFile PrintFiles WaitForKKEdit ShowContinue RunTool RestoreSession ActivateMenuNamed ActivateMenuLabeled SendPosData.
Added some extra example sripts to goodies.
Can now do a wait for session to finish loading.
Removed obsolete 'ActivateMenu' from scripting.
Updated clipboardplugin for new scripting commands.
Updated sessionmanager plugin for new scripting commands.
Added extra script commands ("Quit","GotoLine","SearchDef","SelectTab","Bookmark","CloseTab","SetMark","UnsetMark","ActivateMenu","MoveTo","SelectBetween","Paste","Copy","Cut","InsertText","InsertNL","InsertFile","PrintFiles","WaitForKKEdit","ShowContinue","RunTool","RestoreSession","ActivateMenuNamed","ActivateMenuLabeled").
Redone scripting commands now using words instead of single letters ( kkeditmsg -h for full list ).
User marks are now labeled "user1","user2","user3","user4" Add at curent line with eg 'Uuser3' remove with eg 'uuser3'.
Added open session file to scripting ( command='s', fullpath to session file needed ). 
More scripting.
Added 'goodies' folder with example script.
Added 'Continue' menu to Navigation to continue with script.
Added run external tool by menu name to rc.
Added wait for 1st message to kkeditmsg.
Message split into smaller messages if to large (>MAX_MSG_SIZE)